--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,5 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        ls
         cd src/
-        python bey-vinted-bot.py
+        ls
+        ##python bey-vinted-bot.py
